tests/tests/pos/surface/impl_trait04.rs
trait Trait {}

impl Trait for i32 {}

fn foo() -> impl Trait {
    1
}
